--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </main>
 
   <footer class="app-footer">
-    <small>Hecho con ❤️ para pruebas educativas. Funciona mejor con buena iluminación.</small>
+    <small>David Fidel Guzmán Sánchez 21200255</small>
   </footer>
 
   <script src="app.js"></script>
